@@ -82,5 +82,6 @@ module Cairo
   end
 end
 
+require 'cairo/point'
 require 'cairo/colors'
 require 'cairo/context'
