@@ -1,3 +1,14 @@
+2007-05-03  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo.h, src/rb_cairo_path.c: added Cairo::Point and
+	Cairo::PathData.
+
+	* src/lib/cairo/point.rb (Cairo::Point#distance): moved from
+	Cairo::Context::Path::Point.
+	* src/lib/cairo/context/path.rb (Cairo::Context::Path::Point):
+	removed.
+	* src/lib/cairo.rb, src/lib/cairo/context/path.rb: used Cairo::Point.
+
 2007-05-01  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_pattern.c
